[gd_scene load_steps=5 format=3 uid="uid://b0qh1oihkbn2d"]

[ext_resource type="Script" uid="uid://cp244mq2mbom3" path="res://scripts/hosting_lobby.gd" id="1_j5rr8"]
[ext_resource type="Texture2D" uid="uid://g4aju6pdd8rn" path="res://assets/colors/solid_sage.png" id="2_m1nxy"]
[ext_resource type="PackedScene" uid="uid://dnimkygvmidpk" path="res://setting_interface_scenes/settings_visual_button.tscn" id="3_ya550"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fwojp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5rr8")

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m1nxy")

[node name="LobbyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 728.0
offset_top = 72.0
offset_right = 889.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 50
text = "Lobby:"

[node name="LobbyCodeButton" type="Button" parent="LobbyLabel"]
layout_mode = 0
offset_left = 168.0
offset_top = -4.0
offset_right = 379.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_fwojp")
text = "Copy Me â§‰"
flat = true

[node name="Players" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 152.0
offset_bottom = 227.0
theme_override_font_sizes/font_size = 25
text = "Players"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1595.0
offset_top = 960.0
offset_right = 1856.0
offset_bottom = 1024.0
theme_override_font_sizes/font_size = 25
text = "Back to Menu"

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 960.0
offset_right = 567.0
offset_bottom = 1023.0
theme_override_font_sizes/font_size = 25
text = "Start Game!"

[node name="ReadyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 976.0
offset_right = 270.0
offset_bottom = 1011.0
theme_override_font_sizes/font_size = 25
text = "Players Ready: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 192.0
offset_right = 456.0
offset_bottom = 227.0
theme_override_font_sizes/font_size = 25
text = "Maps:"

[node name="SelectedMapLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1344.0
offset_top = 192.0
offset_right = 1499.0
offset_bottom = 227.0
theme_override_font_sizes/font_size = 25
text = "SelectedMap"

[node name="SettingsVisualButton" parent="." instance=ExtResource("3_ya550")]
offset_left = 64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 64.0

[connection signal="pressed" from="LobbyLabel/LobbyCodeButton" to="." method="_on_lobby_code_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
